--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="./keiththecarexpert.png" alt="" width="1000" height="1000" />
+    <img
+      src="./assets/keiththecarexpert.png"
+      alt=""
+      width="1000"
+      height="1000"
+    />
   </body>
 </html>
